force-app/main/default/objects/OpportunityLineItem/fields/IPR_Coverage_Price_Adder__c.field-meta.xml
<CustomField>
    <fullName>IPR_Coverage_Price_Adder__c</fullName>
    <formula>IF(Premium_Product_Price_Difference__c &gt; 0,&quot;(&quot; &amp; TEXT( floor( Premium_Product_Price_Difference__c ) ) + &quot;.&quot; + right( TEXT( ( 1 + Premium_Product_Price_Difference__c - floor( Premium_Product_Price_Difference__c ) ) * 100 ), 2 ) &amp; &quot; &quot; &amp; TEXT(CurrencyIsoCode) &amp;&quot; adder)&quot;,&quot;&quot;)</formula>
    <label>IPR Coverage Price Adder</label>
    <type>Text</type>
</CustomField>