force-app/main/default/objects/OpportunityLineItem/fields/Premium_Product_Price_Difference__c.field-meta.xml
<CustomField>
    <fullName>Premium_Product_Price_Difference__c</fullName>
    <label>Premium Product Price Difference</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>