force-app/main/default/objects/OpportunityLineItem/fields/Prod_Active__c.field-meta.xml
<CustomField>
    <fullName>Prod_Active__c</fullName>
    <formula>if ( PricebookEntry.Product2.IsActive = True, &quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether quoted product is active or not. Product must be active to allow Clone of Quotation</inlineHelpText>
    <label>Prod Active</label>
    <type>Text</type>
</CustomField>