force-app/main/default/objects/OpportunityLineItem/fields/Prod_Cost__c.field-meta.xml
<CustomField>
    <fullName>Prod_Cost__c</fullName>
    <formula>PricebookEntry.Product2.COGS_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Production cost of quoted item. Excluding IPR</inlineHelpText>
    <label>Prod Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>