force-app/main/default/objects/OpportunityLineItem/fields/Product_Grade_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Grade_Text__c</fullName>
    <description>Product Grade that appears on the quotation.</description>
    <formula>IF(ISBLANK(PricebookEntry.Product2.Product_Grade__c),
&quot; &quot;,
BR() &amp; PricebookEntry.Product2.Product_Grade__c
)</formula>
    <inlineHelpText>Product Grade that appears on the quotation.</inlineHelpText>
    <label>Product Grade Text</label>
    <type>Text</type>
</CustomField>