force-app/main/default/objects/OpportunityLineItem/fields/Special_Price_Request_Product__c.field-meta.xml
<CustomField>
    <fullName>Special_Price_Request_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to related Special Price Request Product</inlineHelpText>
    <label>Special Price Request Product</label>
    <referenceTo>Special_Price_Request_Product__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>