force-app/main/default/objects/OpportunityLineItem/fields/Use_Restriction_Text__c.field-meta.xml
<CustomField>
    <fullName>Use_Restriction_Text__c</fullName>
    <description>Orig:
If ( PricebookEntry.Product2.IPR__c &gt; 0,
BR() &amp; &quot;Restriction: use for &apos;&quot; &amp; text(Use_Restriction__c) &amp; &quot;&apos; only.&quot;,
&quot; &quot;)</description>
    <formula>If ( OR(ISBLANK(TEXT(Use_Restriction__c)),TEXT(Use_Restriction__c)=&quot;-&quot;), &quot; &quot;, BR() &amp; &quot;Restriction: use for &apos;&quot; &amp; text(Use_Restriction__c) &amp; &quot;&apos; only.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Text as it appears on quotations</inlineHelpText>
    <label>Use Restriction Text</label>
    <type>Text</type>
</CustomField>