force-app/main/default/objects/OpportunityLineItem/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Year of the Quotation, imported from Special Price Request Product (field Year Px)</description>
    <formula>left(text(Year_Date__c),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Year of the Quotation, imported from Special Price Request Product (field Year Px)</inlineHelpText>
    <label>Year</label>
    <type>Text</type>
</CustomField>