force-app/main/default/objects/OpportunityLineItem/fields/Year_Date__c.field-meta.xml
<CustomField>
    <fullName>Year_Date__c</fullName>
    <description>Starting date of validity, it should be 1st January of the corresponding year, to be imported from Special Price Request Product field (Year Px)</description>
    <inlineHelpText>Starting date of validity, it should be 1st January of the corresponding year, to be imported from Special Price Request Product field (Year Px)</inlineHelpText>
    <label>Year (Date)</label>
    <type>Date</type>
</CustomField>