force-app/main/default/objects/OpportunityLineItem/fields/Year_Text__c.field-meta.xml
<CustomField>
    <fullName>Year_Text__c</fullName>
    <description>Year text for Mail Merge</description>
    <formula>If(ISBLANK(Year_Date__c),&quot;&quot;,BR()&amp;&quot;Year: &quot;&amp;Year__c)</formula>
    <inlineHelpText>Year text for Mail Merge</inlineHelpText>
    <label>Year Text</label>
    <type>Text</type>
</CustomField>