force-app/main/default/objects/OpportunityLineItem/validationRules/Product_not_for_quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_not_for_quote</fullName>
    <active>false</active>
    <description>To avoid products to be quoted</description>
    <errorConditionFormula>Product2.Name=&quot;TOBY-L3904&quot;</errorConditionFormula>
    <errorDisplayField>Product2Id</errorDisplayField>
    <errorMessage>This product is not available for quotation.</errorMessage>
</ValidationRule>